apps/dex/overlays/ops/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dex
  namespace: dex
spec:
  hosts:
  - "dex.analect.com"
  gateways:
  - istio-system/istio-ingressgateway
  http:
  - headers:
      request:
        set:
          X-Forwarded-Port: "443"
    route:
    - destination:
        port:
          number: 5556
        host: dex.dex.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dex-k8s-authenticator
  namespace: dex
spec:
  hosts:
  - "kube-login.analect.com"
  gateways:
  - istio-system/istio-ingressgateway
  http:
  - headers:
      request:
        set:
          X-Forwarded-Port: "443"
    route:
    - destination:
        port:
          number: 80
        host: dex-k8s-authenticator.dex.svc.cluster.local
